--- a/server/root/rbcms/themes/default/header.rhtml
+++ b/server/root/rbcms/themes/default/header.rhtml
@@ -6,12 +6,12 @@
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="ナビゲーションの切替">
             <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="javascript:void(0)">NewBlog</a>
+            <a class="navbar-brand" href="javascript:void(0)"><%= sitename %></a>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" href="#">ホーム</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">プロフィール</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">コンタクト</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/">ホーム</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about">プロフィール</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/contact">コンタクト</a></li>
                 </ul>
             </div>
             <form class="form-inline">
