--- a/server/root/rbcms/themes/default/about.rhtml
+++ b/server/root/rbcms/themes/default/about.rhtml
@@ -9,7 +9,7 @@
         <title>NewBlog - プロフィール</title>
         
         <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.min.css" />
+        <link rel="stylesheet" href="/theme-item/css/main.min.css" />
     </head>
     <body>
         <div id="app" class="w-100 text-secondary">
@@ -55,17 +55,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3 my-5">
-
-                            <h5>カテゴリー</h5>
-
-                            <ul class="list-group" style="max-width: 400px;">
-                                <li class="list-group-item"><a href="">なし</a></li>
-                                <li class="list-group-item"><a href="">Ruby</a></li>
-                                <li class="list-group-item"><a href="">Docker</a></li>
-                            </ul>
-
-                        </div>
+                        <%= content "category" %>
 
                     </div>
                 </section>
@@ -83,6 +73,6 @@
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-        <script src="js/main.js" type="text/javascript"></script>
+        <script src="/theme-item/js/main.js" type="text/javascript"></script>
     </body>
 </html>
