--- a/server/root/rbcms/themes/default/home.rhtml
+++ b/server/root/rbcms/themes/default/home.rhtml
@@ -9,7 +9,7 @@
         <title>NewBlog</title>
         
         <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.min.css" />
+        <link rel="stylesheet" href="/theme-item/css/main.min.css" />
     </head>
     <body>
         <div id="app" class="w-100 text-secondary">
@@ -37,22 +37,14 @@
     
                             <p><%= article["postContent"] %></p>
     
-                            <small>投稿日時: <%= article["postDate"] %></small>
+                            <small>投稿日時: <a href="/date/<%= article["postDate"] %>" class="text-secondary"><%= article["postDate"] %></a></small><br>
+                            <small>カテゴリー: <a href="/category/<%= article["postCategory"] %>" class="text-secondary"><%= article["postCategory"] %></a></small>
                             <hr>
                         <% end %>
                         </div>
 
-                        <div class="col-md-3">
-
-                            <h5>カテゴリー</h5>
-
-                            <ul class="list-group" style="max-width: 400px;">
-                                <li class="list-group-item"><a href="">なし</a></li>
-                                <li class="list-group-item"><a href="">Ruby</a></li>
-                                <li class="list-group-item"><a href="">Docker</a></li>
-                            </ul>
-
-                        </div>
+                        <%= content "category" %>
+                        
                     </div>
                 </section>
 
@@ -85,6 +77,6 @@
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-        <script src="js/main.js" type="text/javascript"></script>
+        <script src="/theme-item/js/main.js" type="text/javascript"></script>
     </body>
 </html>
