--- a/server/root/rbcms/themes/default/page.rhtml
+++ b/server/root/rbcms/themes/default/page.rhtml
@@ -9,36 +9,12 @@
         <title>NewBlog - helloworld</title>
         
         <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.min.css" />
+        <link rel="stylesheet" href="/theme-item/css/main.min.css" />
     </head>
     <body>
         <div id="app" class="w-100 text-secondary">
 
-            <header class="w-100 bg-light border-bottom">
-
-                <div class="container">
-
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="ナビゲーションの切替">
-                        <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <a class="navbar-brand" href="javascript:void(0)">NewBlog</a>
-                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                            <ul class="navbar-nav">
-                                <li class="nav-item"><a class="nav-link active" href="#">ホーム</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">プロフィール</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">コンタクト</a></li>
-                            </ul>
-                        </div>
-                        <form class="form-inline">
-                            <input class="form-control mr-sm-2" type="search" placeholder="キーワードを検索" aria-label="キーワードを検索">
-                            <button type="submit" class="btn btn-outline-success my-2 my-sm-0">検索</button>
-                        </form>
-                    </nav>
-
-                </div>
-
-            </header>
+            <%= header %>
 
             <main>
 
@@ -77,44 +53,14 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3 my-5">
-
-                            <h5>カテゴリー</h5>
-
-                            <ul class="list-group" style="max-width: 400px;">
-                                <li class="list-group-item"><a href="">なし</a></li>
-                                <li class="list-group-item"><a href="">Ruby</a></li>
-                                <li class="list-group-item"><a href="">Docker</a></li>
-                            </ul>
-
-                        </div>
+                        <%= content "category" %>
 
                     </div>
                 </section>
 
             </main>
 
-            <footer class="page-footer font-small bg-dark text-light">
-
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12 py-5 d-flex justify-content-center align-items-center">
-                            <div class="mb-5 flex-center">
-                                <a href="https://www.facebook.com/profile.php?id=100035294776733" class="text-light" target="_blank"><i class="fab fa-facebook-f fa-lg mr-md-5 mr-3 fa-2x"></i></a>
-                                <a href="https://twitter.com/CxYzOMOH6tcH1QQ" class="text-light" target="_blank"><i class="fab fa-twitter fa-lg mr-md-5 mr-3 fa-2x"></i></a>
-                                <a href="https://github.com/veleno-do" class="text-light" target="_blank"><i class="fab fa-github fa-lg mr-md-5 mr-3 fa-2x"></i></a>
-                                <a href="https://hub.docker.com/u/veleno0115" class="text-light" target="_blank"><i class="fab fa-docker fa-lg mr-md-5 mr-3 fa-2x"></i></a>
-                            </div>
-                        </div>
-                    </div>
-              
-                </div>
-              
-                <div class="footer-copyright text-center py-3">
-                    <small>© 2020 Copyright: <a href="https://github.com/veleno-do" class="text-light"> https://github.com/veleno-do</a></small>
-                </div>
-              
-            </footer>
+            <%= footer %>
 
         </div>
 
@@ -125,6 +71,6 @@
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-        <script src="js/main.js" type="text/javascript"></script>
+        <script src="/theme-item/js/main.js" type="text/javascript"></script>
     </body>
 </html>
