--- a/server/root/rbcms/view/installer.rhtml
+++ b/server/root/rbcms/view/installer.rhtml
@@ -14,7 +14,7 @@
             <section class="row d-flex justify-content-center align-items-center h-100 w-100">
 
                 <div class="col-5 text-center bg-light rounded">
-                    <h3>RBCMS</h3>
+                    <h3>RBCMS - インストーラー</h3>
                     <small class="text-secondary">{{topMessage}}</small>
 
                     <hr>
