--- a/server/root/rbcms/view/logout.html
+++ b/server/root/rbcms/view/logout.html
@@ -14,7 +14,7 @@
 
         <section class="col-5 text-center">
 
-            <h3>RBCMS</h3>
+            <h3>RBCMS - ログアウト</h3>
 
             <hr>
 
