--- a/server/root/rbcms/themes/default/404.rhtml
+++ b/server/root/rbcms/themes/default/404.rhtml
@@ -9,7 +9,7 @@
         <title>NewBlog - 404</title>
         
         <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.min.css" />
+        <link rel="stylesheet" href="/theme-item/css/main.min.css" />
     </head>
     <body>
         <div id="app" class="w-100 text-secondary">
@@ -43,6 +43,6 @@
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-        <script src="js/main.js" type="text/javascript"></script>
+        <script src="/theme-item/js/main.js" type="text/javascript"></script>
     </body>
 </html>
