--- a/server/root/rbcms/view/login.rhtml
+++ b/server/root/rbcms/view/login.rhtml
@@ -13,7 +13,7 @@
             
             <div class="row d-flex justify-content-center align-items-center h-100 w-100">
                 <section class="col-5 text-center bg-light rounded">
-                    <h3>RBCMS</h3>
+                    <h3>RBCMS - ログイン</h3>
                     <small class="text-secondary">{{topMessage}}</small>
 
                     <hr>
