今日もがんばった気がする。rhtml多め

--- a/server/root/rbcms/themes/default/header.rhtml
+++ b/server/root/rbcms/themes/default/header.rhtml
@@ -14,10 +14,7 @@
                     <li class="nav-item"><a class="nav-link" href="/contact">コンタクト</a></li>
                 </ul>
             </div>
-            <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="キーワードを検索" aria-label="キーワードを検索">
-                <button type="submit" class="btn btn-outline-success my-2 my-sm-0">検索</button>
-            </form>
+            <%= search %>
         </nav>
 
     </div>
