--- a/server/root/rbcms/themes/default/home.rhtml
+++ b/server/root/rbcms/themes/default/home.rhtml
@@ -4,15 +4,15 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+        <%= head %>
 
-        <title>NewBlog</title>
+        <title><%= sitename %></title>
         
         <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
         <link rel="stylesheet" href="/theme-item/css/main.min.css" />
     </head>
     <body>
-        <div id="app" class="w-100 text-secondary">
+        <div class="w-100 text-secondary">
 
             <%= header %>
 
@@ -39,7 +39,7 @@
     
                             <small>投稿日時: <a href="/date/<%= article["postDate"] %>" class="text-secondary"><%= article["postDate"] %></a></small><br>
                             <small>カテゴリー: <a href="/category/<%= article["postCategory"] %>" class="text-secondary"><%= article["postCategory"] %></a></small>
-                            <hr>
+                            <hr class="my-5">
                         <% end %>
                         </div>
 
@@ -51,15 +51,7 @@
                 <section class="w-100">
                     <div class="container">
 
-                        <nav aria-label="Page navigation example" class="d-flex justify-content-center align-items-center">
-                            <ul class="pagination">
-                                <li class="page-item"><a class="page-link" href="#">前へ</a></li>
-                                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item"><a class="page-link" href="#">次へ</a></li>
-                            </ul>
-                        </nav>
+                        <%= pagenate %>
 
                     </div>
                 </section>
@@ -69,14 +61,13 @@
             <%= footer %>
 
         </div>
-
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        
+
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-        <script src="/theme-item/js/main.js" type="text/javascript"></script>
+        <%= foot %>
     </body>
 </html>
