--- a/server/root/rbcms/themes/default/page.rhtml
+++ b/server/root/rbcms/themes/default/page.rhtml
@@ -4,15 +4,16 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-
-        <title>NewBlog - helloworld</title>
+        <title><%= sitename %> - <%= postTitle %></title>
         
         <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+
+        <%= head %>
+
         <link rel="stylesheet" href="/theme-item/css/main.min.css" />
     </head>
     <body>
-        <div id="app" class="w-100 text-secondary">
+        <div class="w-100 text-secondary">
 
             <%= header %>
 
@@ -31,11 +32,23 @@
                                 <small>投稿日時: <a href="/date/<%= postDate %>" class="text-secondary"><%= postDate %></a></small>
 
                                 <hr>
-            
+
                                 <%= postContent %>
                             </div>
 
                             <hr>
+
+                            <div class="my-5">
+                                <h4>コメント一覧</h4>
+
+                                <%= comments %>
+                            </div>
+
+                            <div class="my-5">
+                                <h4>コメントを残す</h4>
+
+                                <%= form %>
+                            </div>
 
                             <div class="col-12 my-5">
 
@@ -53,6 +66,7 @@
                                 </div>
 
                             </div>
+
                         </div>
 
                         <%= content "category" %>
@@ -65,14 +79,13 @@
             <%= footer %>
 
         </div>
-
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        
+
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-        <script src="/theme-item/js/main.js" type="text/javascript"></script>
+        <%= foot %>
     </body>
 </html>
