コメントを残せるようにした

--- a/server/root/rbcms/themes/default/page.rhtml
+++ b/server/root/rbcms/themes/default/page.rhtml
@@ -39,7 +39,7 @@
                             <hr>
 
                             <div class="my-5">
-                                <h4>コメント一覧</h4>
+                                <h4>コメント</h4>
 
                                 <%= comments %>
                             </div>
