--- a/server/root/rbcms/view/comments.rhtml
+++ b/server/root/rbcms/view/comments.rhtml
@@ -1,12 +1,8 @@
+<% commentlist.each do |i,comment| %>
 <div class="media my-5">
     <div class="media-body">
-        <h5 class="mt-0">Media heading</h5>
-        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+        <h5 class="mt-0 font-weight-bold"><%= comment["commentName"] %></h5>
+        <%= comment["commentText"] %>
     </div>
 </div>
-<div class="media">
-    <div class="media-body">
-        <h5 class="mt-0">Media heading</h5>
-        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    </div>
-</div>
+<% end %>
